[package]
name = "drib"
version = "0.1.0"
authors = ["Andre Nathan <andrenth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
humantime = "2"
ipnet = { version = "2.3", features = ["serde"] }
iprange = "0.6"
lazy_static = "1"
log = "0.4"
num_cpus = "1"
regex = "1"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["full"] }
tinytemplate = "1"
trust-dns-resolver = "0.19"
url = "2"

[dev-dependencies]
hyper = "0.13"
rand = "0.7"
tempdir = "0.3"
