[package]
name = "drib"
version = "1.0.0"
authors = ["Andre Nathan <andrenth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "3.1.12", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
humantime = "2"
ipnet = { version = "2.3", features = ["serde"] }
iprange = "0.6"
lazy_static = "1"
log = "0.4"
num_cpus = "1"
regex = "0.2"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tera = { version = "1", default-features = false }
tokio = { version = "1.0", features = ["full"] }
trust-dns-resolver = "0.20"
url = "2"

[dev-dependencies]
hyper = { version = "0.14", features = ["server"] }
rand = "0.8"
tempdir = "0.3"
